--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
-.App {
+.container {
+  display: grid;
+  grid-auto-flow: row dense;
+  grid-template-columns: 0.4fr 0.4fr 2.7fr 0.6fr;
+  grid-template-rows: 0.2fr 0.5fr 1.9fr 0.3fr;
+  gap: 0px 0px;
   text-align: center;
 }
 
