--- a/src/css /Footer.css
+++ b/src/css /Footer.css
@@ -1,6 +1,5 @@
 .footer {
-  grid: area 4px / 1px / 5px / 5px;
-  grid-column: 1/3;
+  grid-area: 4 / 1 / 5 / 5;
   background-color: black;
   color: aliceblue;
 }
