--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,11 @@
-/* .container {
-  display: grid;
-  grid-auto-flow: row dense;
-  grid-template-columns: 0.4fr 0.4fr 2.7fr 0.6fr;
-  grid-template-rows: 0.2fr 0.5fr 1.9fr 0.3fr;
-  gap: 0px 0px;
-  text-align: center;
-}
-
 body {
   margin: 0;
   padding: 0;
-} */
-.App {
-  text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -48,4 +15,4 @@ body {
   to {
     transform: rotate(360deg);
   }
-}
+} */
