--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
 .container {
   display: grid;
-  grid-auto-flow: row dense;
+  /* grid-auto-flow: row dense; */
   grid-template-columns: repeat(2, 0.4fr) 2.7fr 0.6fr;
   grid-template-rows: 0.2fr 0.5fr 1.9fr 0.3fr;
   gap: 0px 0px;
+  height: 100%;
+}
+
+.nav {
+  grid-area: 1/ 2/ 2/ 5;
+  background-color: cornflowerblue;
+  margin-bottom: 5%;
 }
 .footer {
   display: grid;
@@ -17,11 +24,6 @@
 
 .footer-name {
   grid-area: footer-name;
-}
-
-.nav {
-  grid-area: 1/ 2/ 2/ 5;
-  background-color: cadetblue;
 }
 
 .sidebar {
@@ -50,10 +52,10 @@
   grid-template-rows: 0.4fr 2.3fr 0.3fr;
   gap: 0px 0px;
   grid-template-areas:
-    "..."
+    ". game-archive ."
     ". cardOne ."
     ". button .";
-  grid-area: 3/3/4/4;
+  grid-area: 3 / 3 /4 / 4;
 }
 
 .cardOne {
@@ -72,6 +74,13 @@
   grid-area: button;
 }
 
+.game-archive {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+.form {
+  grid-area: 1 / 1 / 3 / 4;
+}
 .filter {
   grid-area: 2/ 4/ 3/ 5;
 }
