--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,33 @@
 .container {
   display: grid;
-  /* grid-auto-flow: row dense; */
-  grid-template-columns: repeat(2, 0.4fr) 2.7fr 0.6fr;
-  grid-template-rows: 0.2fr 0.5fr 1.9fr 0.3fr;
+  grid-auto-flow: row dense;
+  grid-template-columns: 0.4fr 0.4fr 2.7fr 0.6fr;
+  grid-template-rows: 0.2fr 0.5fr 0.5fr 0.3fr;
   gap: 0px 0px;
-  height: 100%;
+  /* height: 700px; */
+  width: 100%;
+  margin: 0;
 }
 
 .nav {
-  grid-area: 1/ 2/ 2/ 5;
+  grid-area: 1/ 1/ 2/ 5;
   background-color: cornflowerblue;
-  margin-bottom: 5%;
+  margin-bottom: 40%;
+}
+.lists {
+  text-align: center;
 }
 .footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 0.1fr 2.9fr 0.1fr;
+  grid-template-rows: 0.2fr 2.2fr 0.2fr;
   gap: 0px 0px;
   grid-template-areas: ". . ." ". footer-name ." ". . .";
-  background-color: blue;
-  grid-area: 4 / 1 / 5 / 5;
+  background-color: rgb(25, 24, 26);
+  grid-area: 4/ 1 / 5/ 5;
+  color: aliceblue;
+  font-size: 52%;
+  text-align: center;
 }
 
 .footer-name {
@@ -62,6 +70,11 @@
   grid-area: cardOne;
 }
 
+.new {
+  height: 190vh;
+  width: 100%;
+}
+
 .button {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -100,6 +113,10 @@
 
 .add-button {
   grid-area: add-button;
+}
+
+.movebtn {
+  display: grid;
 }
 
 .login {
