--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,12 +3,13 @@
   color: #ffffff;
   padding: 10px;
   display: flex;
+  justify-content: space-between; /* To spread navbar contents across the full width */
   align-items: center;
 }
 
 .nav h1 {
   margin: 0;
-  flex: 1;
+  flex: 1; /* This ensures the logo takes up as much space as possible, pushing other elements to the right */
 }
 
 .nav h1 .logo {
@@ -18,12 +19,18 @@
   text-decoration: none;
 }
 
-.nav .movebtn {
-  margin-left: 20px;
+.nav .movebtn1,
+.nav .movebtn,
+.nav .auth-buttons {
+  display: flex;
+  align-items: center;
+  gap: 20px; /* Adjusts spacing between navbar elements */
 }
 
 .nav .list,
-.nav .add-button {
+.nav .add-button,
+.nav .login,
+.nav .signup {
   text-decoration: none;
   color: #fff;
   background-color: transparent;
@@ -32,6 +39,8 @@
 }
 
 .nav .list:hover,
-.nav .add-button:hover {
+.nav .add-button:hover,
+.nav .login:hover,
+.nav .signup:hover {
   color: #f0f0f0;
 }
