--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 body {
   display: grid;
   flex-direction: column;
-  min-height: 100vh;
   margin: 0;
+  /* overflow: hidden; */
 }
 
 .container {
   display: grid;
   flex-direction: column;
+}
+
+.scrollable {
+  overflow-y: scroll;
+  height: 100vh;
 }
