--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,4 +1,13 @@
-.home_scrollable {
-  overflow: auto;
-  height: 100vh;
+.home_head {
+  grid-column: 2/3;
+  /* background-color: blue; */
+  border: 1px solid black;
+}
+
+.home_title {
+  font-size: 20px;
+  font-weight: bold;
+  color: #000000;
+  text-align: center;
+  margin-top: 10px;
 }
